--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,3 +6,26 @@ dialog {
   max-width: 100vw;
   max-height: 100vh;
 }
+/* Strict no-scrollbar policy.) */
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
+/* not yet working for some reason.) */
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  html,
+  body {
+    @apply no-scrollbar;
+  }
+}
