--- a/src/styles/globals-archive.css
+++ b/src/styles/globals-archive.css
@@ -1,3 +1,29 @@
+/* ARCHIVE: global.css */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --background: transparent;
+  --foreground: white;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: transparent;
+    --foreground: white;
+  }
+}
+
+body {
+  color: var(--foreground);
+  background: var(--background);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* EOF */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
