--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,12 +8,12 @@
 }
 
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   :root {
     --background: black;
     --foreground: white;
   }
-} */
+}
 
 body {
   color: var(--foreground);
