--- a/src/styles/globals-archive.css
+++ b/src/styles/globals-archive.css
@@ -22,12 +22,33 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* EOF */
-
 dialog {
   max-width: 100vw;
   max-height: 100vh;
 }
+
+/*  */
+
+:root {
+  --background: transparent;
+  --foreground: transparent;
+}
+
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: black;
+    --foreground: white;
+  }
+}
+
+body {
+  color: var(--foreground);
+  background: var(--background);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
 /* Strict no-scrollbar policy.) */
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
