--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,3 +75,14 @@ dialog {
   max-width: 100vw;
   max-height: 100vh;
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
